--- a/src/App.css
+++ b/src/App.css
@@ -195,3 +195,14 @@
 .custom-dropdown::after {
   color: rgba(0, 0, 0, 0.4);
 }
+
+.diedLogo {
+  position: absolute;
+  width: 200px;
+  top: 220px;
+  left: 250px;
+}
+
+.hidden {
+  display: none;
+}
